[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_indexer"
version = "0.0.1"
authors = [
  { name="flowpoint", email="flowpoint@protonmail.com" },
]
description = "a minimal build system tool"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["key1"]
license = {text = "MIT License"}
dependencies = [
    'click',
    'torch',
    'lmdb',
    'transformers',
    'faiss-cpu',
]

[project.optional-dependencies]
dev = [
    'ipython',
    'python-lsp-server',
    'mypy',
    'pytest',
]

[project.scripts]
ai_indexer = "ai_indexer.cli:cli"

#[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"


